# zenkit-codegen

./: CHANGELOG.md  Cargo.toml  License-MIT.txt  README.md
examples/crm-deals/: README.md  deal_value.rs
src/: error.rs  gen.rs  main.rs  templates.rs
