[package]
name = "zenkit-codegen"
version = "0.3.0"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
description = "Code generator to create Zenkit client library based on lists and fields in user workspace"
keywords = ["codegen","zenkit","generation","bindings"]
categories = ["command-line-utilities", "api-bindings", "development-tools"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/stevelr/zenkit-codegen"
repository = "https://github.com/stevelr/zenkit-codegen"
readme = "README.md"

[dependencies]
bytes = "0.5"
clap = { version="3.0.0-beta.2" }
handlebars = "3"
handlebars_misc_helpers = {version = "0.10", default-features=false, features=["string", "serde_json"]}
Inflector = { version ="0.11", features=["heavyweight"] }
reqwest = { version="0.10", features=["json"] }
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"]}
strum_macros = "0.19"
tokio = { version="0.2", features=["rt-core", "macros", "fs"]}
uuid = "0.8"
zenkit = { version="0.3", path="../zenkit-rs" }

[[bin]]
name = "zk-codegen"
path = "src/main.rs"

