[package]
name = "zenkit-codegen"
version = "0.5.1"
authors = ["stevelr <git@somecool.net>"]
edition = "2018"
description = "Generate Zenkit ORM client in Rust from user-defined workspace schema"
keywords = ["codegen","zenkit","generation","bindings"]
categories = ["command-line-utilities", "api-bindings", "development-tools"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/stevelr/zenkit-codegen"
repository = "https://github.com/stevelr/zenkit-codegen"
readme = "README.md"

[dependencies]
bytes = "0.5"
chrono = "0.4"
clap = { version="3.0.0-beta.2" }
handlebars = "3"
handlebars_misc_helpers = {version = "0.10", default-features=false, features=["string", "serde_json"]}
Inflector = { version ="0.11", features=["heavyweight"] }
reqwest = { version="0.11", features=["json"] }
serde_json = "1.0"
serde_repr = "0.1"
serde = { version = "1.0", features = ["derive"]}
strum_macros = "0.19"
tokio = { version="1.0", features=["rt", "macros", "fs"]}

[dependencies.zenkit]
version = "0.6"
path = "../zenkit-rs"

[[bin]]
name = "zk-codegen"
path = "src/main.rs"

